# HaGameLite

./: .gitignore  .gitmodules  CMakeLists.txt  HaGame2.sln  HaGame2.vcxproj  HaGame2.vcxproj.filters  README.md  cmake_install.cmake
cmake/: FindHaGame.cmake  FindHaGame2.cmake
impl/: glad.c  hagame.cpp  shader.cpp  shaderProgram.cpp  window.cpp
impl/ math/: collisions.cpp  functions.cpp  lineIntersection.cpp
impl/audio/: device.cpp  player.cpp  stream.cpp  streamBuffer.cpp
impl/common/: console.cpp  weapons.cpp
impl/core/: assets.cpp  component.cpp  cppScript.cpp  entity.cpp  entityMap.cpp  game.cpp  gameObject.cpp  groupManager.cpp  hg.cpp  prefab.cpp  scene.cpp  script.cpp  system.cpp
impl/graphics/: animatedSprite.cpp  batchRenderer.cpp  camera.cpp  debug.cpp  font.cpp  image.cpp  material.cpp  mesh.cpp  model.cpp  monitors.cpp  particleEmitter.cpp  shader.cpp  shaderProgram.cpp  spriteSheet.cpp  spriteSheetV2.cpp  text.cpp  textBuffer.cpp  texture.cpp  textureAtlas.cpp  tilemap.cpp  window.cpp  windows.cpp
impl/input/: deviceManager.cpp  input.cpp
impl/net/: net.cpp  timer.cpp
impl/physics/: box2D.cpp  physics2D.cpp  rigidbody2D.cpp  transform.cpp  world2D.cpp
impl/ui/: anchor.cpp  element.cpp  frame.cpp  graphicsContext.cpp
impl/utils/: behaviorTree.cpp  config.cpp  enum.cpp  file.cpp  libLoader.cpp  pathfinding.cpp  profiler.cpp  (+2 more)
include/: hagame.h
lib/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
public/: CMakeCache.txt  Makefile  cmake_install.cmake
wasm/: CMakeCache.txt  Makefile  cmake_install.cmake
(+224 files in other folders)
